--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
       </div>
       <!-- end make menu-->
     </div>
+    <!--make slider-->
+    <div class="slider">
+        
+ <!-- end make slider-->
+    </div>
+   
     <!-- end make project-->
-    <div></div>
+    <div>
   </body>
 </html>
