--- a/index.html
+++ b/index.html
@@ -59,7 +59,13 @@
       </div>
     </div>
  <!-- end make slider-->
-     <!-- Swiper -->
+    <!--make carousel-->
+    <div class="carousel">
+      <div class="products"></div>
+    </div>
+    <!--end make carousel-->
+
+     
      
    
     <!-- end make project-->
